@@ -1,0 +1,22 @@
+#: integer-valued features
+INTEGER_FEATURES = [
+    "fl1_max",
+    "fl1_npeaks",
+    "fl2_max",
+    "fl2_npeaks",
+    "fl3_max",
+    "fl3_npeaks",
+    "frame",
+    "index",
+    "nevents",
+]
+
+#: ancillary features that are easily computed
+QUICK_FEATURES = [
+    "area_ratio",
+    "area_um",
+    "aspec",
+    "deform",
+    "index",
+    "time",
+]
